<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="activities.ResultActivity"
    android:scrollbars="vertical">


    <LinearLayout
        android:id="@+id/myLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <ListView
            android:id="@+id/activity_result_LstVwResultHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorPrimary" />

        <ListView
            android:id="@+id/activity_result_LstVwResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorPrimary" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/pp"
        android:layout_below="@id/myLL"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/str_totalScore"/>

        <TextView
            android:id="@+id/totalResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/record"
        android:layout_below="@id/pp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:padding="5dp"
        android:textColor="#FF0000"
        android:textSize="20sp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/saveResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_save"
            android:drawableStart="@drawable/vector_statistic"
            style="@style/myStyle"/>

        <Button
            android:id="@+id/retryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/vector_retry"
            android:text="@string/str_retry"
            style="@style/myStyle"/>

        <Button
            android:id="@+id/backToMainMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/vector_exit"
            android:text="@string/str_backToMainMenu"
            style="@style/myStyle"/>


    </LinearLayout>


</RelativeLayout>
